# M1-recherche

./: .gitignore  BenchmarkRobinson.numbers  README.md  pyproject.toml  run_benchmarks.sh
Algos/: MartelliMontanari.py  test.py
Algos/ArbreDiscrimination/: arbre_de_discrimination.py  test_arbre_de_discrimination.py  test_arbre_de_discrimination_2.py  test_rechercher_une.py
Algos/MM/: MartelliMontanari.py  testSimple.py  traiterLitterauxDictionnaire.py  traiterLitterauxList.py
Algos/MartelliMontanari/: MartelliMontanari.py  bench.py  bench_comparaison_structure.py  essai.py  test.py  testUnitaire.py
Algos/Predicat/: test.py  unifPredicat.py
Algos/Robinson/: benchmark.py  main_robinson.py  robinson.py  test.py  testPredicats.py
Bench/: PROTOCOLE.md  benchmark.py  brut_arbre.csv  brut_mm.csv  brut_robinson.csv  synthese_arbre.csv  synthese_mm.csv  synthese_robinson.csv  synthetisate.py
Communication/: .gitignore  idee_intro.txt  rapport.tex  rapportV2.tex  rapport_generalites.tex  renduTD1.tex
Util/Litteral/: Litteral.py  bench.py  bench2.py  test.py  test_traiter_litteraux.py  traiterLitteraux.py  traiterLitterauxDict.py  traiterLitterauxSet.py
Util/Serialisation/: generation.py  serialisation.py  test.py
Util/TermStore/: DictStore.py  Equation.py  ListStore.py  SetStore.py  TermList.py  TermStore.py  arbre_de_discrimination.py  (+4 more)
benchmarks/: bench2.py  benchmark.py  benchmark_martelli_montanari.py  benchmark_robinson.py  clean_pycache.sh  generation.py  run_benchmarks.sh  synthetisate.py
docs/: biblio.bib  rapportV2.bbl-SAVE-ERROR  rapportV2.tex
(+27 files in other folders)
