[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m1-recherche"
version = "0.1.0"
description = "Projet de recherche sur l'unification en logique du premier ordre"
authors = [
    {name = "Guillaume Potel"},
    {name = "Mathéo Vigneres"},
    {name = "Ayath Abogounrin"}
]

dependencies = ["psutil"]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]